<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">


        <SearchView
            android:id="@+id/searchView"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/search_view_background"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/tap_to_search">


        </SearchView>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.chip.ChipGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/categories"
            android:textColor="@color/purple_700"
            android:textSize="32sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="4">

            <androidx.cardview.widget.CardView

                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/img1" />

                    <Button
                        android:id="@+id/btn_checkup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/purple_700"
                        android:onClick="onClicking"
                        android:text="@string/dental_checkup"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ing2" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/purple_700"
                        android:onClick="crown"
                        android:text="@string/Dental_crown"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/img4" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/purple_700"
                        android:onClick="implant"
                        android:text="@string/Tooth_implant"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/img5" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/purple_700"
                        android:onClick="care"
                        android:text="@string/Dental_care"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_add_users"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout

                    android:layout_width="165dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/img6" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/purple_700"
                        android:onClick="polishing"
                        android:text="@string/Teeth_polishing"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_users3"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/im8" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/purple_700"
                        android:onClick="installation"
                        android:text="@string/Orthodontic_installation"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>